--- a/js/packages/web/package.json
+++ b/js/packages/web/package.json
@@ -36,11 +36,10 @@
     "@solana/spl-token": "0.1.6",
     "@solana/spl-token-registry": "^0.2.202",
     "@solana/wallet-adapter-base": "^0.4.1",
-    "@solana/wallet-adapter-react": "^0.7.2",
     "@solana/wallet-adapter-vue": "^0.4.5",
+    "@solana/wallet-adapter-vue-ui": "^0.2.4",
     "@solana/wallet-adapter-wallets": "^0.15.3",
     "@solana/web3.js": "^1.21.0",
-    "@vue/compiler-sfc": "^3.2.30",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "async-sema": "^3.1.1",
     "bn.js": "^5.1.3",
@@ -57,15 +56,12 @@
     "lodash": "^4.17.20",
     "magic-sdk": "^5.1.0",
     "mime": "^3.0.0",
-    "nuxt-edge": "^2.16.0-27358576.777a4b7f",
-    "solana-wallets-vue": "^0.3.1",
     "styled-components": "^5.0.0",
     "three": "^0.128.0",
     "timeago.js": "^4.0.2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxt/types": "^2.15.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -87,6 +83,7 @@
     "gh-pages": "^3.1.0",
     "jest": "^27.4.4",
     "npm-link-shared": "0.5.6",
+    "nuxt3": "^3.0.0-27406801.569aaeb",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.1",
